# schlog

./: .gitignore  MANIFEST.in  README.md  TRANSFORMATION_REPORT.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CHANGELOG.md  INSTALLATION.md  USAGE.md
hive-mind/config/: hive.config.json
hive-mind/docs/: INITIALIZATION_REPORT.md
hive-mind/protocols/: consensus.protocol.js
kautolog/: installer.py
kautolog/templates/: bashrc_autologger.sh  replay  zshrc_autologger.sh
src/kautolog/: __init__.py  cli.py  installer.py
src/kautolog/templates/: kautolog-replay
src/schlog/: cli.py  installer.py
src/schlog/templates/: bashrc_autologger.sh  logrotate_terminal-logs  schlog-replay  tmux_autologger.conf  zshrc_autologger.sh
src/schlog/templates/systemd/: autologger-rclone-sync.service  autologger-rclone-sync.timer
