[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kautolog"
version = "1.1.0"
description = "Kali/Linux auto-logging of all terminal sessions using script(1), with optional tmux, logrotate, and rclone sync."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Mark", email = "mark@example.com"}]
dependencies = ["typer>=0.12.0"]
[project.urls]
Homepage = "https://github.com/marksowell/kautolog"
Repository = "https://github.com/marksowell/kautolog"
[project.scripts]
kautolog = "kautolog.cli:app"
