[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schlog"
version = "0.1.0"
description = "Terminal session auto-logging with script(1), tmux integration, logrotate, and cloud sync capabilities."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Jarad DeLorenzo", email = "jaradd@gmail.com"}]
dependencies = ["typer>=0.12.0"]
keywords = ["terminal", "logging", "session", "script", "tmux", "logrotate", "rclone", "linux"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://delorenj.github.io"
Repository = "https://github.com/delorenj/schlog"
Issues = "https://github.com/delorenj/schlog/issues"

[project.scripts]
schlog = "schlog.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"schlog" = [
    "templates/*.sh",
    "templates/*.conf",
    "templates/schlog-replay",
    "templates/logrotate_terminal-logs",
    "templates/systemd/*.service",
    "templates/systemd/*.timer"
]